<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProjetMOBILE</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Page de connexion -->
    <string name="connexion_page_title">Se connecter</string>
    <string name="connexion_page_nom">Nom</string>
    <string name="connexion_page_mdp">Mot de passe</string>
    <string name="connexion_page_valider">Valider</string>
    <string name="connexion_page_creation">Créer un compte</string>

    <!-- Page de création de compte -->
    <string name="creation_page_title">Créer un compte</string>
    <string name="creation_page_nom">Nom</string>
    <string name="creation_page_mdp">Mot de passe</string>
    <string name="creation_page_confirmation">Confirmer mot de passe</string>
    <string name="creation_page_valider">Valider</string>

    <!-- Page d'accueil -->
    <string name="accueil_page_title">Accueil</string>
    <string name="accueil_page_calendrier">Calendrier des terrains</string>
    <string name="accueil_page_deconnexion">Déconnexion</string>

    <!-- Page connexion -->
    <string name="valider">VALIDER</string>
    <string name="Titre">SE CONNECTER</string>
    <string name="logo">logo</string>
    <string name="creation_compte">Créer un compte</string>
    <string name="Mot_de_passe">Mot de passe</string>
    <string name="text_mdp">Mot de passe</string>
    <string name="Id_name">Nom</string>
    <string name="text_Id">Nom</string>

    <!--page créer un compte  -->
    <string name="Titre2">Créer un compte</string>
    <string name="text_confirmer_mdp">Confirmer mot de passe</string>

        <string name="col1">Horaires</string>
        <string name="col2">Terrain 1</string>
        <string name="col3">Terrain 2</string>
        <string name="row1Horaires">7h00 - 8h00</string>
        <string name="row1Terrain1">1</string>
        <string name="row1Terrain2">2</string>
        <string name="row2Horaires">8h00 - 9h00</string>
        <string name="row2Terrain1">1</string>
        <string name="row2Terrain2">2</string>
        <string name="row3Horaires">9h00 - 10h00</string>
        <string name="row3Terrain1">1</string>
        <string name="row3Terrain2">2</string>
        <string name="row4Horaires">10h00 - 11h00</string>
        <string name="row4Terrain1">1</string>
        <string name="row4Terrain2">2</string>
        <string name="row5Horaires">11h00 - 12h00</string>
        <string name="row5Terrain1">1</string>
        <string name="row5Terrain2">2</string>
        <string name="row6Horaires">12h00 - 13h00</string>
        <string name="row6Terrain1">1</string>
        <string name="row6Terrain2">2</string>
        <string name="row7Horaires">13h00 - 14h00</string>
        <string name="row7Terrain1">1</string>
        <string name="row7Terrain2">2</string>
        <string name="row8Horaires">14h00 - 15h00</string>
        <string name="row8Terrain1">1</string>
        <string name="row8Terrain2">2</string>
        <string name="row9Horaires">15h00 - 16h00</string>
        <string name="row9Terrain1">1</string>
        <string name="row9Terrain2">2</string>
        <string name="row10Horaires">16h00 - 17h00</string>
        <string name="row10Terrain1">1</string>
        <string name="row10Terrain2">2</string>
        <string name="row11Horaires">17h00 - 18h00</string>
        <string name="row11Terrain1">1</string>
        <string name="row11Terrain2">2</string>
        <string name="row12Horaires">18h00 - 19h00</string>
        <string name="row12Terrain1">1</string>
        <string name="row12Terrain2">2</string>
        <string name="row13Horaires">19h00 - 20h00</string>
        <string name="row13Terrain1">1</string>
        <string name="row13Terrain2">2</string>
        <string name="row14Horaires">20h00 - 21h00</string>
        <string name="row14Terrain1">1</string>
        <string name="row14Terrain2">2</string>
        <string name="row15Horaires">21h00 - 22h00</string>
        <string name="row15Terrain1">1</string>
        <string name="row15Terrain2">2</string>


</resources>

