<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:id="@+id/sliding_tabs"
    app:tabMode="scrollable"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pickDateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#05482F"
        android:text="Calendrier"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="1014dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="52dp"
        android:background="@color/orangeClair">

        <!-- Table Heading -->

        <TableRow android:background="@color/colorGreen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Table Data -->

        <TableRow>

            <TextView
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageL1T1"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row4Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row5Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row6Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row7Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row8Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row9Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row10Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row11Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row12Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row13Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row14Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row15Horaires"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                app:srcCompat="@drawable/balleverte" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:backgroundTint="#05482F"
        android:text="Déconnexion"
        android:textColor="@android:color/white" />

</RelativeLayout>